# jenkins_job_test

./: CMakeLists.txt
include/: mathdoer.hpp
jenkins/: buildMe  buildMe.groovy
src/: main.cpp  mathdoer.cpp
